--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>Triple Encoding & Obfuscation</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f0f0f0;
+            background-color: #f9f9f9;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -18,52 +18,93 @@
         }
 
         .container {
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            background-color: #ffffff;
+            padding: 30px;
+            border-radius: 12px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
             max-width: 600px;
-            width: 100%;
+            width: 90%;
             text-align: center;
         }
 
         h1 {
-            color: #333;
+            color: #444;
+            margin-bottom: 24px;
+            font-size: 1.8em;
+        }
+
+        p {
+            color: #777;
             margin-bottom: 20px;
         }
 
         textarea {
             width: 100%;
-            padding: 10px;
-            margin-bottom: 10px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
+            padding: 12px;
+            margin-bottom: 15px;
+            border: 1px solid #ddd;
+            border-radius: 8px;
             resize: none;
+            font-size: 1em;
+            background-color: #f7f7f7;
+        }
+
+        select {
+            padding: 12px;
+            margin: 10px 0;
+            border-radius: 8px;
+            border: 1px solid #ddd;
+            font-size: 1em;
+            background-color: #f7f7f7;
+            width: 100%;
+            box-sizing: border-box;
         }
 
         button {
-            background-color: #4CAF50;
+            background-color: #007BFF;
             color: white;
-            padding: 10px 20px;
+            padding: 12px 24px;
             border: none;
-            border-radius: 4px;
+            border-radius: 8px;
             cursor: pointer;
             margin: 5px;
+            font-size: 1em;
             transition: background-color 0.3s;
         }
 
         button:hover {
-            background-color: #45a049;
+            background-color: #0056b3;
         }
 
         button:active {
-            background-color: #3e8e41;
+            background-color: #004494;
         }
 
         #result {
             margin-top: 20px;
         }
+
+        @media (max-width: 600px) {
+            .container {
+                padding: 20px;
+            }
+
+            button {
+                padding: 10px 20px;
+                font-size: 0.9em;
+            }
+
+            textarea {
+                padding: 10px;
+            }
+
+            select {
+                padding: 10px;
+                font-size: 0.9em;
+            }
+        }
     </style>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/crypto-js.min.js"></script>
 </head>
 <body>
     
@@ -71,10 +112,16 @@
         <h1>Triple Encoding & Obfuscation</h1>
         <p>https://labs.hackxpert.com/RXSS/</p>
         <textarea id="payload" rows="5" placeholder="Enter text here..."></textarea><br>
-        <button onclick="doubleURLEncode()">Double URL Encoding</button>
-        <button onclick="urlEncode()">URL Encoding</button>
-        <button onclick="htmlEncode()">HTML Encoding</button>
-        <button onclick="obfuscate()">Obfuscate JavaScript</button><br>
+        <select id="encodingType">
+            <option value="doubleURLEncode">Double URL Encoding</option>
+            <option value="urlEncode">URL Encoding</option>
+            <option value="htmlEncode">HTML Encoding</option>
+            <option value="obfuscate">Obfuscate JavaScript</option>
+            <option value="base64Encode">Base64 Encoding</option>
+            <option value="md5Encode">MD5 Hashing</option>
+        </select>
+        <button onclick="applyEncoding()">Apply Encoding</button>
+        <button onclick="applyDecoding()">Apply Decoding</button><br>
         <textarea id="result" rows="5" readonly></textarea>
     </div>
 
@@ -83,13 +130,13 @@
             var payload = document.getElementById('payload').value;
             var encodedURL = encodeURIComponent(payload);
             var doubleEncodedURL = encodeURIComponent(encodedURL);
-            document.getElementById('result').value = doubleEncodedURL;
+            return doubleEncodedURL;
         }
 
         function urlEncode() {
             var payload = document.getElementById('payload').value;
             var encodedURL = encodeURIComponent(payload);
-            document.getElementById('result').value = encodedURL;
+            return encodedURL;
         }
 
         function htmlEncode() {
@@ -98,7 +145,7 @@
             for (var i = 0; i < payload.length; i++) {
                 encodedHTML += '&#' + payload.charCodeAt(i) + ';';
             }
-            document.getElementById('result').value = encodedHTML;
+            return encodedHTML;
         }
 
         function obfuscate() {
@@ -121,9 +168,98 @@
                 obfuscatedScript += String.fromCharCode(Math.floor(Math.random() * 94) + 33);
             }
 
-            document.getElementById('result').value = obfuscatedScript;
+            return obfuscatedScript;
+        }
+
+        function base64Encode() {
+            var payload = document.getElementById('payload').value;
+            var encodedBase64 = btoa(payload);
+            return encodedBase64;
+        }
+
+        function md5Encode() {
+            var payload = document.getElementById('payload').value;
+            var hash = CryptoJS.MD5(payload);
+            return hash.toString(CryptoJS.enc.Hex);
+        }
+
+        function applyEncoding() {
+            var encodingType = document.getElementById('encodingType').value;
+            var result;
+            switch(encodingType) {
+                case 'doubleURLEncode':
+                    result = doubleURLEncode();
+                    break;
+                case 'urlEncode':
+                    result = urlEncode();
+                    break;
+                case 'htmlEncode':
+                    result = htmlEncode();
+                    break;
+                case 'obfuscate':
+                    result = obfuscate();
+                    break;
+                case 'base64Encode':
+                    result = base64Encode();
+                    break;
+                case 'md5Encode':
+                    result = md5Encode();
+                    break;
+                default:
+                    result = 'Invalid encoding type';
+            }
+            document.getElementById('result').value = result;
+        }
+
+        function doubleURLDecode() {
+            var payload = document.getElementById('payload').value;
+            var decodedURL = decodeURIComponent(payload);
+            var doubleDecodedURL = decodeURIComponent(decodedURL);
+            return doubleDecodedURL;
+        }
+
+        function urlDecode() {
+            var payload = document.getElementById('payload').value;
+            var decodedURL = decodeURIComponent(payload);
+            return decodedURL;
+        }
+
+        function htmlDecode() {
+            var payload = document.getElementById('payload').value;
+            var doc = new DOMParser().parseFromString(payload, "text/html");
+            var decodedHTML = doc.documentElement.textContent;
+            return decodedHTML;
+        }
+
+        function base64Decode() {
+            var payload = document.getElementById('payload').value;
+            var decodedBase64 = atob(payload);
+            return decodedBase64;
+        }
+
+        function applyDecoding() {
+            var encodingType = document.getElementById('encodingType').value;
+            var result;
+            switch(encodingType) {
+                case 'doubleURLEncode':
+                    result = doubleURLDecode();
+                    break;
+                case 'urlEncode':
+                    result = urlDecode();
+                    break;
+                case 'htmlEncode':
+                    result = htmlDecode();
+                    break;
+                case 'base64Encode':
+                    result = base64Decode();
+                    break;
+                default:
+                    result = 'Decoding not supported for this type';
+            }
+            document.getElementById('result').value = result;
         }
     </script>
 </body>
 </html>
+
 
